--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
-# command to run tests
+# #command to run tests
 script:
   - export PYTHONPATH=$PYTHONPATH:$(pwd)
   - python test.py
